--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <h2>Contact Us</h2>
         <p>Email: info@myshop.com</p>
         <p>Phone: (123) 456-7890</p>
-        <p>Address: 123 Market St, City, Country</p>
+        <p>Address: 123 Market St, Jamshedpur, india</p>
     </section>
 
     <!-- Footer Section -->
