--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- Repeated product cards -->
         <div class="product-card">
             <img src="product1.jpg" alt="Product 1">
-            <h3>Product 1</h3>
+            <h3>Nike Air Force 1 '07</h3>
             <p>$50.00</p>
             <div class="icons">
                 <span class="icon">🛒</span>
@@ -48,7 +48,7 @@
         </div>
         <div class="product-card">
             <img src="product2.jpg" alt="Product 2">
-            <h3>Product 2</h3>
+            <h3>Nike Air Zoom Pegasus 39</h3>
             <p>$75.00</p>
             <div class="icons">
                 <span class="icon">🛒</span>
@@ -57,7 +57,7 @@
         </div>
         <div class="product-card">
             <img src="product3.jpg" alt="Product 3">
-            <h3>Product 3</h3>
+            <h3>Nike React Infinity Run Flyknit 3</h3>
             <p>$100.00</p>
             <div class="icons">
                 <span class="icon">🛒</span>
@@ -73,17 +73,17 @@
         <div class="featured-carousel">
             <div class="featured-card">
                 <img src="product.jpg" alt="Product 1">
-                <h3>Product 1</h3>
+                <h3>Nike Air Max 270</h3>
                 <p>$50.00</p>
             </div>
             <div class="featured-card">
                 <img src="product2.jpg" alt="Product 2">
-                <h3>Product 2</h3>
+                <h3>Nike Dunk Low</h3>
                 <p>$75.00</p>
             </div>
             <div class="featured-card">
                 <img src="product3.jpg" alt="Product 3">
-                <h3>Product 3</h3>
+                <h3>Nike Blazer Mid '77 Vintage</h3>
                 <p>$100.00</p>
             </div>
         </div>
@@ -138,7 +138,7 @@
         <h2>Contact Us</h2>
         <p>Email: info@myshop.com</p>
         <p>Phone: (123) 456-7890</p>
-        <p>Address: 123 Market St, Jamshedpur, india</p>
+        <p>Address: 123 Market St, Jamshedpur, India</p>
     </section>
 
     <!-- Footer Section -->
